<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_color"
    tools:context=".presenter.screens.profile.ProfileScreen">

    <TextView
        android:id="@+id/profile_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/profile"
        android:textColor="@color/default_black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/account"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20sp"
        android:autoSizePresetSizes="10"
        android:background="@drawable/profile_btn"
        android:drawableStart="@drawable/prof_selector_user"
        android:drawableEnd="@drawable/prof_selector_right"
        android:gravity="center|start"
        android:paddingHorizontal="15sp"
        android:text="@string/account"
        android:drawablePadding="15dp"
        android:textAllCaps="false"
        android:textColor="@drawable/profile_text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_phone_number"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:background="@drawable/profile_btn"
        android:drawableStart="@drawable/prof_selector_phone"
        android:drawableEnd="@drawable/prof_selector_right"
        android:gravity="center|start"
        android:paddingHorizontal="15sp"
        android:drawablePadding="15dp"
        android:text="@string/change_phone_number"
        android:textAllCaps="false"
        android:textColor="@drawable/profile_text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/language"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:background="@drawable/profile_btn"
        android:drawableStart="@drawable/prof_selector_planet"
        android:drawableEnd="@drawable/prof_selector_right"
        android:gravity="center|start"
        android:paddingHorizontal="15sp"
        android:text="@string/language"
        android:textAllCaps="false"
        android:drawablePadding="15dp"
        android:textColor="@drawable/profile_text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_phone_number" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/order_history"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:background="@drawable/profile_btn"
        android:drawableStart="@drawable/prof_selector_cart"
        android:drawableEnd="@drawable/prof_selector_right"
        android:gravity="center|start"
        android:paddingHorizontal="15sp"
        android:text="@string/history_order"
        android:drawablePadding="15dp"
        android:textAllCaps="false"
        android:textColor="@drawable/profile_text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/favorite"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:background="@drawable/profile_btn"
        android:drawableStart="@drawable/prof_selector_heart"
        android:drawableEnd="@drawable/prof_selector_right"
        android:gravity="center|start"
        android:paddingHorizontal="15sp"
        android:text="@string/favorite"
        android:textAllCaps="false"
        android:drawablePadding="15dp"
        android:textColor="@drawable/profile_text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_history" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:background="@drawable/profile_btn"
        android:drawableStart="@drawable/prof_selector_logout"
        android:drawableEnd="@drawable/prof_selector_right"
        android:drawablePadding="15dp"
        android:gravity="center|start"
        android:paddingHorizontal="15sp"
        android:text="@string/logout_from_account"
        android:textAllCaps="false"
        android:textColor="@drawable/profile_text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite" />

</androidx.constraintlayout.widget.ConstraintLayout>