<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.screens.catalog.FullDetails">

    <TextView
        android:id="@+id/all_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Все характеристики"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:textColor="@color/default_black"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="30sp"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="15dp"
        android:src="@drawable/ic_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"
        android:layout_marginVertical="25dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/all_char"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/general_char_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:text="@string/general_char"
        android:textSize="18sp"
        android:textColor="@color/default_black"/>

    <TextView
        android:id="@+id/char_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="14sp"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/general_char_textView"
        android:layout_margin="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smartphone"
        android:textSize="14sp"
        android:textColor="@color/default_black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/general_char_textView"
        android:layout_margin="15dp"/>


    <TextView
        android:id="@+id/char_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OS_ver"
        android:textSize="14sp"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/char_1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ios_14"
        android:textSize="14sp"
        android:textColor="@color/default_black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/char_1"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/char_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_frame"
        android:textSize="14sp"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/char_2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classic"
        android:textSize="14sp"
        android:textColor="@color/default_black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/char_2"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/char_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/housing_material"
        android:textSize="14sp"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/char_3"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steel"
        android:textSize="14sp"
        android:textColor="@color/default_black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/char_3"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"/>


    <TextView
        android:id="@+id/char_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/design"
        android:textSize="14sp"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/char_4"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moisture_protection"
        android:textSize="14sp"
        android:textColor="@color/default_black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/char_4"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"/>
    <TextView
        android:id="@+id/char_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_of_protection"
        android:textSize="14sp"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/char_5"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip68"
        android:textSize="14sp"
        android:textColor="@color/default_black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/char_5"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"/>


    <TextView
        android:id="@+id/screen_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40sp"
        android:text="Экран"
        android:textColor="@color/default_black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/char_6" />

    <TextView
        android:id="@+id/screen_char_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="14sp"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_textView"
        android:layout_margin="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smartphone"
        android:textSize="14sp"
        android:textColor="@color/default_black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_textView"
        android:layout_margin="15dp"/>


    <TextView
        android:id="@+id/screen_char_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OS_ver"
        android:textSize="14sp"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_char_1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ios_14"
        android:textSize="14sp"
        android:textColor="@color/default_black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_char_1"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/screen_char_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_frame"
        android:textSize="14sp"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_char_2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classic"
        android:textSize="14sp"
        android:textColor="@color/default_black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_char_2"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/screen_char_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/housing_material"
        android:textSize="14sp"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_char_3"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steel"
        android:textSize="14sp"
        android:textColor="@color/default_black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_char_3"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"/>


    <TextView
        android:id="@+id/screen_char_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/design"
        android:textSize="14sp"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_char_4"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moisture_protection"
        android:textSize="14sp"
        android:textColor="@color/default_black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_char_4"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"/>
    <TextView
        android:id="@+id/screen_char_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_of_protection"
        android:textSize="14sp"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_char_5"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip68"
        android:textSize="14sp"
        android:textColor="@color/default_black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_char_5"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>